fix #2 (sidebar scroll - not tested on mobile)

--- a/public/scss/_sidebar.scss
+++ b/public/scss/_sidebar.scss
@@ -8,3 +8,8 @@
 #sidebar {
   margin-top: $header-height;
 }
+
+.sidebar-container {
+  height: 100%;
+  overflow-y: scroll;
+}
